horizontal scroll fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,6 @@
 @media only screen and (max-width: 650px){
   .app {
     background-color: var(--clr-primary);
-    overflow: hidden;
   }
   *{
     margin: 0;
